# python-di-fastapi

./: .gitignore  README.md  pyproject.toml
pdp/: application.py  containers.py  database.py  endpoints.py  models.py  repositories.py  services.py
tests/: test_api.py
